Lots of improvements for distributed rendering on flowtree. This is version 0.10.